--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -20,12 +20,12 @@ import '@/styles/global.css';
 	</head>
 	<body>
 		<div class="min-h-screen bg-[#0a0a0a] text-white">
-			<Navigation client:only />
-			<HeroSection client:only />
-			<InteractiveShowcase client:only />
-			<ProvidersSection client:only />
-			<PrivacySection client:only />
-			<Footer client:only />
+			<Navigation client:only="react" />
+			<HeroSection client:only="react" />
+			<InteractiveShowcase client:only="react" />
+			<ProvidersSection client:only="react" />
+			<PrivacySection client:only="react" />
+			<Footer client:only="react" />
 		</div>
 	</body>
 </html>
